--- a/libtales-qt/nativegraphicexportdialog.ui
+++ b/libtales-qt/nativegraphicexportdialog.ui
@@ -157,7 +157,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Export</string>
+        <string>Export...</string>
        </property>
       </widget>
      </item>
